# mundo-flags

./: .editorconfig  .gitignore  LICENCE  Makefile  README.md  README.rst  check  flags.csv  format-svg.sh  iso3166-1_en.csv  lint-python.sh  lint-svg.py  lint-svg.sh  makefile  manage.py  placeholder.txt  pyproject.toml  scraper  setup.cfg  tasks.py
.github/workflows/: imagemagick.yml  lint.yml  rsvg-convert.yml  test.yml
examples/: imagemagick.makefile  raster.makefile  rsvg-convert.makefile
manage_flags/: __init__.py  alpha2image.py  database.py  downloader.py  flagdata.py  scour.py  validator.py  validator_error.py
manage_flags/databases/: iso3166-1.json
tests/: __init__.py  test_downloader.py  test_scour.py
tests/databases/: __init__.py  test_iso31661.py
