[tool.poetry]
name = "mundo-flags"
version = "0.1.0"
description = "A web scraper to retrieve sovereign flag images from wikimedia.org."
authors = ["Seth Fischer <seth@fischer.nz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pycountry = "^20.7.3"
requests = "^2.26.0"
scour = "^0.38.2"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
