[tool.poetry]
name = "mundo-flags"
version = "2021.10.16"
description = "A web scraper to retrieve sovereign flag images from wikimedia.org."
authors = ["Seth Fischer <seth@fischer.nz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pycountry = "^20.7.3"
requests = "^2.26.0"
scour = "^0.38.2"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
rstcheck = "^3.3.1"
commitizen = "^2.18.1"
invoke = "^1.6.0"
pydocstyle = "^6.1.1"
toml = "^0.10.2"
bumpver = "^2021.1113"

[tool.bumpver]
current_version = "2021.10.16"
version_pattern = "YYYY.MM.DD"
commit_message = "bump: version {old_version} → {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "2021.10.16"
tag_format = "$version"

[tool.pydocstyle]
convention = "pep257"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
