[tool.poetry]
name = "mundo-flags"
version = "2021.10.17"
description = "A web scraper to retrieve sovereign flag images from wikimedia.org."
authors = ["Seth Fischer <seth@fischer.nz>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pycountry = "^20.7.3"
requests = "^2.26.0"
scour = "^0.38.2"
Jinja2 = "^3.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
bumpver = "^2022.1120"
commitizen = "^2.18.1"
flake8 = "^6.0.0"
invoke = "^1.6.0"
isort = "^5.9.3"
pydocstyle = "^6.1.1"
rstcheck = "^6.1.1"
toml = "^0.10.2"

[tool.bumpver]
current_version = "2021.10.17"
version_pattern = "YYYY.MM.DD"
commit_message = "bump: version {old_version} → {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "2021.10.17"
tag_format = "$version"
changelog_start_rev = "5b767ff1be51ab89e584715e4d48d192897acd87"

[tool.pydocstyle]
convention = "pep257"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
